# CardForge

./: .gitignore  README.md  coverage_output.txt  fix_encoding.py  fix_translations.py  main.py  pyproject.toml
.github/workflows/: qa.yml  release.yml
scripts/: compile_translations.sh  fill_translations.py  update_translations.sh
src/cardforge/: _app_icon.py  about_dialog.py  canvas.py  icon_picker_dialog.py  icons.py  mail_merge.py  main_window.py  models.py  paper_template_dialog.py  pdf_export.py  print_dialog.py  print_preview.py  properties_panel.py  renderer.py  theme.py  translations.py
src/cardforge/i18n/: cardforge_de.qm  cardforge_de.ts  cardforge_es.qm  cardforge_es.ts  cardforge_fr.qm  cardforge_fr.ts  cardforge_ja.qm  cardforge_ja.ts  cardforge_pt_BR.qm  cardforge_pt_BR.ts  cardforge_ru.qm  cardforge_ru.ts  cardforge_zh_CN.qm  cardforge_zh_CN.ts
tests/: conftest.py  test_about_dialog.py  test_canvas.py  test_canvas_inline.py  test_e2e.py  test_e2e_recent_files.py  test_icons.py  test_mail_merge.py  test_main_window.py  test_models.py  test_paper_template_dialog.py  test_pdf_export.py  test_print_dialog.py  test_print_preview.py  test_properties_panel.py  test_renderer.py  test_theme.py  test_translations.py
