[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cardforge"
version = "1.0.0"
description = "Professional Business Card Editor"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "reportlab>=4.0",
    "qrcode[pil]>=7.4",
    "Pillow>=10.0",
    "openpyxl>=3.1",
    "qtawesome>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pyinstaller>=6.0",
]

[project.scripts]
cardforge = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "-q",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["cardforge"]
branch = true
omit = ["tests/*", "main.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false

# ---------------------------------------------------------------------------
# Ruff (Linting + Formatting)
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument (common in Qt)
    "UP007", # Optional[X] still clearer in dataclasses context
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert allowed in tests

# ---------------------------------------------------------------------------
# Mypy (Typ-Checks)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["cardforge"]
ignore_missing_imports = true   # PySide6-Stubs oft nicht verfügbar
warn_return_any = false
warn_unused_configs = true
check_untyped_defs = true
